[package]
name = "duald"
version = "0.1.0"
authors = ["AlterionX <ben.xu.cs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.wasm-bindgen]
version = "0.2"
[dependencies.js-sys]
version = "0.3"
[dependencies.web-sys]
version = "0.3"
features = [
    "CssStyleDeclaration",
    "Document",
    "Event",
    "EventTarget",
    "HtmlElement",
    "Node",
    "Range",
    "Selection",
    "Window",
]

[dependencies.fern]
version = "0.6"
[dependencies.console_log]
version = "0.2"
[dependencies.log]
version = "0.4"
[dependencies.tap]
version = "0.4"
